# HESTIA-Smart-Home-Simulator

./: README.md  Testes_Rotina.py  data_generator.py  data_transformer.py  main.py  menu.py  proba_routine_merger.py  pyproject.toml  requirements.txt
dados/: README.md  dados-11-10-2023_21-21-59.csv
doc/: Cenario_validacao_Artigo(1usuarios-casa-mayki).md  Grafo_casa-ROTINA_SIMPLES(2usuarios).md  Grafo_casa-ROTINA_SIMPLES(Dividindo_ap).md  Grafo_teste-grupo(3usuarios).md
modelos/: README.md
notebook/: Validação_SSEDG.ipynb  analise_dados_reais.ipynb  dados-gerador-14dias(primeiro).csv  dados_sintetico_validacao_14_dias.csv  dados_sintetico_validacao_60_dias.csv  duplicated_message.ipynb  validacao.ipynb
rotinas/: Cenario_argus(1usuario).json  Cenario_argus(1usuarios-sem-anomalia).json  Cenario_validacao_Artigo(1usuarios-casa-mayki).json  Grafo_casa-ROTINA_ARTIGO(2usuarios_bemDefinido_semvariacao_01).json  Grafo_casa-ROTINA_ARTIGO(2usuarios_bemDefinido_semvariacao_02).json  Grafo_casa-ROTINA_SIMPLES(2usuarios - ApenasPLUG).json  Grafo_casa-ROTINA_SIMPLES(2usuarios).json  Grafo_casa-ROTINA_SIMPLES(Dividindo_ap).json  Grafo_casa-ROTINA_SIMPLES(laboratorio).json  Grafo_casa02-ROTINA_ARTIGO(2usuarios).json  Grafo_lab-ROTINA_ARTIGO(laboratorio).json  Grafo_teste-grupo(1usuarios_sem_variacao).json  Grafo_teste-grupo(3usuarios).json  Grafo_teste-grupo(3usuarios_sem_conflitos).json  Grupo_3usuarios(GPT-prompt).json  Grupo_3usuarios(GPT-prompt-completo-A).json  Grupo_3usuarios(GPT-prompt-completo-B).json  Grupo_3usuarios(GPT-prompt-completo-C).json
simulador/: atividade.py  (+5 more)
(+12 files in other folders)
